fix: blog post img overflow

--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -9,7 +9,9 @@ ol li {
 
 #posts .content-wrapper { margin-top: 2em; }
 #posts h1 { text-align: center; } 
-#post { max-width: 650px;  }
+
+#post img { width: 100%; }
+#post { max-width: 650px;}
 #post h2 { justify-content: flex-start; margin-top: 2em;}
 
 .post-thumbnail { width: 100%; height: 100%; border-radius: 0.1em; }
